# s4wn

./: .gh_issues_open.json  .gitignore  .test_push  AGENTS.md  AGENTS_BABYLON.md  BASE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  PROMPTS.md  README.md  RENDERING_AUDIT.md  TECHNOLOGY_CHOICE.md  TODO.md  _fetch.py  as_calls.txt  docker-compose.yml  generate_assets.py  implementation_plan.md  index.html  index_babylon.html  jest.config.js  map-viewer.html  night_shift_log.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: cd-token-refresh.yml  ci.yml
.hermes/: RULES.md
__mocks__/@babylonjs/: loaders.js
assets/: MODEL_LISTING.md  manifest.json  sample-island.map.json
bin-shim/: as-logging-shim.rs  as-shim.c  as-shim.py  as-shim.rs  dlltool-shim.rs  test.def  test.lib  test.s  test_asm.rs  test_asm_abs.rs  test_std_asm.rs
engine/: Cargo.toml  build.sh  index.html  lobby.html  mobile-enhancements.js  mobile_tests.mjs
engine/config/: buildings.json  categories.json  data.js  nations.json  resource-icons.js  resources.json  terrain.json  tutorial.js  units.json
engine/pkg/: package.json  s4wn_engine.d.ts  s4wn_engine.js  s4wn_engine_bg.wasm  s4wn_engine_bg.wasm.d.ts
engine/src/: ara_crypt.rs  base_validation_tests.rs  camera.rs  combat.rs  decompress.rs  economy.rs  economy_tests.rs  game_loop.rs  lib.rs  lib_tests.rs  map.rs  model.rs  model.rs.bak  nation.rs  network.rs  particle.rs  pathfinding.rs  shaders.rs  units.rs  worker_ai.rs
engine/ui/: editor.js  explorer.js  splash.js
engine/ui/game/: overlays.js  panels.js
plans/: IMPLEMENTATION_STATUS.md  README.md  animation_and_asset_detail_plan.md  asset_prompts.md  building_animation_system.md  construction_pipeline_plan.md  dark_tribe_plan.md  debug_explorer_plan.md  economy_logistics_plan.md  in_game_menu_decorations_plan.md  in_game_menu_plan.md  magic_divine_plan.md  military_combat_plan.md  nation_pack_system_plan.md  nations_and_factions_plan.md  rendering_audit.md  territory_expansion_plan.md  transport_and_specialists_plan.md  tutorial_system_plan.md  unit_behavior_system.md
playwright-report/: index.html
scripts/: gen_terrain_models.py  generate.py  generate_art.py  generate_building_objs.py  generate_config_js.py  generate_icon.py  generate_terrain_textures.js  generate_terrains.py  generate_test_maps.py  generate_ui_textures.js  minify_shaders.py  regen_terrain_atlas.py  validate_config.py  validate_test_maps.py
server/: Cargo.toml  Dockerfile
server/src/: game_state.rs  main.rs  protocol.rs  room.rs
src/: GameApp.ts  main.ts
tests/: README.md  conftest.py  map-viewer.html  playwright.config.ts  pytest.ini  run_tests.sh  test_index_page.py  test_lobby_page.py  test_map_viewer.py  test_performance.py  test_visual_regression.py  test_wasm_bridge.py
web/: Caddyfile  start.sh
(+410 files in other folders)
