[package]
name = "s4wn-engine"
version = "0.1.0"
edition = "2021"
description = "Siedler 4 Web-Native game engine"
license = "MIT"
repository = "https://github.com/mayrd/s4wn"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "AngleInstancedArrays",
    "HtmlElement",
    "Element",
    "Node",
    "Performance",
    "MouseEvent",
    "WheelEvent",
    "console",
] }

[profile.release]
opt-level = "s"
lto = true
