[package]
name = "s4wn-engine"
version = "0.1.0"
edition = "2021"
description = "Siedler 4 Web-Native game engine"
license = "MIT"
repository = "https://github.com/mayrd/s4wn"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlContextAttributes",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "console",
    "Performance",
    "WebGlFramebuffer",
    "WebGlTexture",
    "WebGlRenderbuffer",
] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
