[package]
name = "s4wn-server"
version = "0.1.0"
edition = "2021"
description = "Siedler 4 Web-Native game server"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
